--- a/web,sighup.html
+++ b/web,sighup.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-Up Page</title>
     <style>
-        /* Integrated CSS Styles for Sign-Up Form */
 
         body {
             font-family: Arial, sans-serif;
@@ -21,12 +20,12 @@
         }
 
         .Reg {
-            background-color: rgba(23, 23, 23, 0.8); /* Slightly transparent */
+            background-color: rgba(23, 23, 23, 0.8); 
             border-radius: 25px;
             padding: 2.5em;
             width: 400px;
             box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
-            backdrop-filter: blur(12px); /* Apply blur effect */
+            backdrop-filter: blur(12px); 
             animation: fadeIn 1s ease-in-out;
         }
 
